--- a/FRONTEND00/www/index.html
+++ b/FRONTEND00/www/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat%22%3E">
     <title>Smartphone Store</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="topnav">
+            <a href="#servicos">Serviços</a>
+            <a href="#produtos">Produtos</a>
+            <a href="#sobrenos">Sobre Nós</a>
+            <a href="#suporte">Suporte</a>
+        </div>
+    </nav>
+    <div class="content" style="text-align: center;">
+        <header>
+            <h1>ABACATE</h1>
+        </header>
+
+        <div id="servicos">
+            <h1>Serviços</h1>
+        </div>
+
+        <div id="produtos">
+            <h1>Produtos</h1>
+        </div>
+
+        <div id="sobrenos">
+            <h1>Sobre Nós</h1>
+        </div>
+
+        <div id="suporte">
+            <h1>Suporte</h1>
+        </div>
+    </div>
 </body>
 </html>
