Updated index.html and style.css
Updated the div 'Sobre Nós' and added images.

--- a/FRONTEND00/www/index.html
+++ b/FRONTEND00/www/index.html
@@ -12,31 +12,70 @@
 <body>
     <nav>
         <div class="topnav">
+            <a href="#home"></a>
             <a href="#servicos">Serviços</a>
             <a href="#produtos">Produtos</a>
             <a href="#sobrenos">Sobre Nós</a>
             <a href="#suporte">Suporte</a>
         </div>
     </nav>
-    <div class="content" style="text-align: center;">
+    <div class="content" style="text-align:center; padding: 300px;">
         <header>
-            <h1>ABACATE</h1>
+            <div id="home">
+                <h1>ABACATE</h1>
+            </div>
         </header>
 
-        <div id="servicos">
-            <h1>Serviços</h1>
+        <div id="servicos" class="w3-opacity w3-justify w3-padding-64">
+            <h1><b style="color:white;">Serviços</b></h1>
         </div>
 
-        <div id="produtos">
-            <h1>Produtos</h1>
+        <div id="produtos" class="w3-opacity w3-justify w3-padding-64">
+            <h1><b style="color:white;">Produtos</b></h1>
         </div>
 
-        <div id="sobrenos">
-            <h1>Sobre Nós</h1>
+        <div id="sobrenos" class="w3-opacity w3-justify w3-padding-64">
+            <h1><b style="color:white;">Sobre Nós</b></h1>
+            <br>
+            <b>Armando Brandão</b>
+            <br><br>
+            <img src="images/wheezer.jpg" style="max-width:100%; height:auto;">
+            <br><br>
+            <li><b>Idade: </b> 20</li>
+            <li><b>Nacionalidade: </b> Portuguesa</li>
+            <li><b>Localidade: </b> Oeiras, Barcarena</li>
+            <li>Estudante de Engenharia Informática, na UAL</li>
+            <br><br>
+            <b>André Santos</b>
+            <br><br>
+            <img src="images/batatinha.jpg" style="max-width:100%; height:auto;">
+            <br><br>
+            <li><b>Idade: </b> 20</li>
+            <li><b>Nacionalidade: </b> Portuguesa</li>
+            <li><b>Localidade: </b> Sintra, Cacém</li>
+            <li>Estudante de Engenharia Informática, na UAL</li>
+            <br><br>
+            <b>Diogo Silva</b>
+            <br><br>
+            <img src="images/jamal.jpg" style="max-width:100%; height:auto;">
+            <br><br>
+            <li><b>Idade: </b> 21</li>
+            <li><b>Nacionalidade: </b> Portuguesa</li>
+            <li><b>Localidade: </b> Lisboa, Lisboa</li>
+            <li>Estudante de Engenharia Informática, na UAL</li>
+            <br><br>
+            <b>Vasco Bettencourt</b>
+            <br><br>
+            <img src="images/vesqui.jpg" style="max-width:100%; height:auto;">
+            <br><br>
+            <li><b>Idade: </b> 20</li>
+            <li><b>Nacionalidade: </b> Portuguesa</li>
+            <li><b>Localidade: </b> Sintra, Massamá</li>
+            <li>Estudante de Engenharia Informática, na UAL</li>
         </div>
 
-        <div id="suporte">
-            <h1>Suporte</h1>
+        <div id="suporte" class="w3-opacity w3-justify w3-padding-64">
+            <h1><b style="color:white;">Suporte</b></h1>
         </div>
     </div>
 </body>
