--- a/FRONTEND00/www/index.html
+++ b/FRONTEND00/www/index.html
@@ -21,11 +21,6 @@
         </div>
     </nav>
     <div class="content" style="text-align:center; padding: 300px;">
-        <header>
-            <div id="home">
-                <h1>ABACATE</h1>
-            </div>
-        </header>
 
         <button class="open-button" onclick="openForm()">Login</button>
         <div class="form-popup" id="myForm">
@@ -43,12 +38,93 @@
             </form>
         </div>
 
+        <header>
+            <div id="home">
+                <h1><b>Monkey Business</b></h1>
+                <h2>We are way better than Apple</h2>
+                <br>
+                <img src="images/monkey.png">
+                <hr>
+            </div>
+        </header>
+
         <div id="servicos" class="w3-justify w3-padding-64">
             <h1><b>Serviços</b></h1>
+            <br>
+            <img src="images/monkereparing.jpg">
+            <br><br>
+            <p>A nossa empresa disponibiliza vários serviços relativos a telemóveis, tais como:</p>
+            <ul>
+                <li>Retoma de telemóveis.</li>
+                <li>Reparação de telemóveis.</li>
+                <li>Fornecimento de peças de telemóveis.</li>
+                <li>Formatação de telemóveis.</li>
+                <li>Instalação de novas peças.</li>
+            </ul>
+            <p>Futuramente haverão novos serviços relativos a produtos informáticos, tais como instalação de sistemas operativos e reparação de computadores.</p>
+            <br>
+            <h2><b>Preços</b></h2>
+            <br>
+            <h4><b>Reparação</b></h4>
+            <br>
+            <h5>Monkey Phone</h5>
+            <p>100€ - 200€</p>
+            <br>
+            <h5>iMonkey</h5>
+            <p>100€ - 200€</p>
+            <br>
+            <h5>MonkeyMi</h5>
+            <p>50€ - 100€</p>
+            <br>
+            <h5>Monkia</h5>
+            <p>50€ - 100€</p>
+            <br>
+            <h5>Monksung</h5>
+            <p>100€ - 150€</p>
+            <br>
+            <h4><b>Peças</b></h4>
+            <br>
+            <p>
+                Baterias - 30€ - 50€ <br>
+                Ecrãs - 50€ - 100€ <br>
+                USB-C port - 10€ - 20€ <br>
+                Headphone jack - 5€ - 10€ <br>
+                Câmara trazeira - 50€ - 100€
+            </p>
         </div>
 
         <div id="produtos" class="w3-justify w3-padding-64">
             <h1><b>Produtos</b></h1>
+            <br>
+            <img src="images/monkeycellphone.jpg">
+            <br><br>
+            <h3><b>Monkey Phone</b></h3>
+            <img src="images/10.png">
+            <p>Monkey Phone 2 - 300€</p>
+            <br>
+            <h3><b>iMonkey</b></h3>
+            <br><br>
+            <img src="images/2.png">
+            <br><br>
+            <p>iMonkey 5 - 500€</p>
+            <br><br>
+            <h3><b>MonkeyMi</b></h3>
+            <br><br>
+            <img src="images/11.png">
+            <br>
+            <p>MonkeyMi 10S - 200€</p>
+            <br>
+            <h3><b>Monkia</b></h3>
+            <br>
+            <img src="images/6.png">
+            <br><br>
+            <p>Monkia 4 - 400€</p>
+            <br><br>
+            <h3><b>Monkeysung</b></h3>
+            <br><br>
+            <img src="images/5.png">
+            <br><br>
+            <p>Monkeysung S20 - 1000€</p>
         </div>
 
         <div id="sobrenos" class=" w3-justify w3-padding-64">
@@ -58,48 +134,66 @@
             <br><br>
             <img src="images/wheezer.jpg" style="max-width:100%; height:auto;">
             <br><br>
-            <li><b>Idade: </b> 20</li>
-            <li><b>Nacionalidade: </b> Portuguesa</li>
-            <li><b>Localidade: </b> Oeiras, Barcarena</li>
-            <li>Estudante de Engenharia Informática, na UAL</li>
+            <ul>
+                <li><b>Idade: </b> 20</li>
+                <li><b>Nacionalidade: </b> Portuguesa</li>
+                <li><b>Localidade: </b> Oeiras, Barcarena</li>
+                <li>Estudante de Engenharia Informática, na UAL</li>
+            </ul>
             <br><br>
             <b>André Santos</b>
             <br><br>
             <img src="images/batatinha.jpg" style="max-width:100%; height:auto;">
             <br><br>
-            <li><b>Idade: </b> 20</li>
-            <li><b>Nacionalidade: </b> Portuguesa</li>
-            <li><b>Localidade: </b> Sintra, Cacém</li>
-            <li>Estudante de Engenharia Informática, na UAL</li>
+            <ul>
+                <li><b>Idade: </b> 20</li>
+                <li><b>Nacionalidade: </b> Portuguesa</li>
+                <li><b>Localidade: </b> Sintra, Cacém</li>
+                <li>Estudante de Engenharia Informática, na UAL</li>
+            </ul>
             <br><br>
             <b>Diogo Silva</b>
             <br><br>
             <img src="images/jamal.jpg" style="max-width:100%; height:auto;">
             <br><br>
-            <li><b>Idade: </b> 21</li>
-            <li><b>Nacionalidade: </b> Portuguesa</li>
-            <li><b>Localidade: </b> Lisboa, Lisboa</li>
-            <li>Estudante de Engenharia Informática, na UAL</li>
+            <ul>
+                <li><b>Idade: </b> 21</li>
+                <li><b>Nacionalidade: </b> Portuguesa</li>
+                <li><b>Localidade: </b> Lisboa, Lisboa</li>
+                <li>Estudante de Engenharia Informática, na UAL</li>
+            </ul>
             <br><br>
             <b>Vasco Bettencourt</b>
             <br><br>
             <img src="images/vesqui.jpg" style="max-width:100%; height:auto;">
             <br><br>
-            <li><b>Idade: </b> 20</li>
-            <li><b>Nacionalidade: </b> Portuguesa</li>
-            <li><b>Localidade: </b> Sintra, Massamá</li>
-            <li>Estudante de Engenharia Informática, na UAL</li>
+            <ul>
+                <li><b>Idade: </b> 20</li>
+                <li><b>Nacionalidade: </b> Portuguesa</li>
+                <li><b>Localidade: </b> Sintra, Massamá</li>
+                <li>Estudante de Engenharia Informática, na UAL</li>
+            </ul>
         </div>
 
         <div id="suporte" class="w3-justify w3-padding-64">
             <h1><b>Suporte</b></h1>
-            <h3>Entre em contacto conosco via email, telefone ou visite-nos.</h3>
             <br>
-            <p>email@email.vesqui</p>
-            <p>91219129</p>
-            <p>Rua do Armando, Vesqui Town 12
-            <p>1950-011 Chelas City</p>
+            <p>Entre em contacto conosco em caso de dúvidas. <br>Envie-nos um email ou visite-nos.</p>
+            <br>
+            <address>
+                monkeybusiness@autonoma.pt<br>
+                Rua dos Macacos nº 27<br>
+                1950-011, Monkey City<br>
+                Monkey Land
+            </address>
+            <hr>  
         </div>
+
+        <footer>
+            <div class="footer">
+                <p>Social media</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
