--- a/FRONTEND00/www/index.html
+++ b/FRONTEND00/www/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="scripts/script.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat%22%3E">
+    <script src="scripts/script.js"></script>
     <title>Smartphone Store</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
                 <h1><b>Monkey Business</b></h1>
                 <h2>We are way better than Apple</h2>
                 <br>
-                <img src="images/monkey.png">
+                <img src="images/monkey.png" style="max-width:100%; height:auto;">
                 <hr>
             </div>
         </header>
@@ -51,7 +51,7 @@
         <div id="servicos" class="w3-justify w3-padding-64">
             <h1><b>Serviços</b></h1>
             <br>
-            <img src="images/monkereparing.jpg">
+            <img src="images/monkereparing.jpg" style="max-width:100%; height:auto;">
             <br><br>
             <p>A nossa empresa disponibiliza vários serviços relativos a telemóveis, tais como:</p>
             <ul>
@@ -65,73 +65,97 @@
             <br>
             <h2><b>Preços</b></h2>
             <br>
-            <h4><b>Reparação</b></h4>
-            <br>
-            <h5>Monkey Phone</h5>
-            <p>100€ - 200€</p>
-            <br>
-            <h5>iMonkey</h5>
-            <p>100€ - 200€</p>
-            <br>
-            <h5>MonkeyMi</h5>
-            <p>50€ - 100€</p>
-            <br>
-            <h5>Monkia</h5>
-            <p>50€ - 100€</p>
-            <br>
-            <h5>Monksung</h5>
-            <p>100€ - 150€</p>
+            <h4><b>Reparação e Formatação</b></h4>
+            <p>Os preços de reparações variam consoante o telemóvel em questão, devido às diferentes peças e à acessibilidade ao interior do telemóvel.<br>
+                Também se tem em conta a complexidade da estrutura do telemóvel que deseja reparar.
+            </p>
+            <ul>
+                <li><b>Monkey Phone</b> - 75€ - 125€</li>
+                <li><b>iMonkey</b> - 100€ - 200€</li>
+                <li><b>MonkeyMi</b> - 50€ - 100€</li>
+                <li><b>Monkia</b> - 50€ - 100€</li>
+                <li><b>Monkeysung</b> - 100€ - 200€</li>
+            </ul>
+            <p>Caso queira o nosso serviço de formatação do dispositivo, o preço é global, sendo 30€.</p>
             <br>
             <h4><b>Peças</b></h4>
-            <br>
-            <p>
-                Baterias - 30€ - 50€ <br>
-                Ecrãs - 50€ - 100€ <br>
-                USB-C port - 10€ - 20€ <br>
-                Headphone jack - 5€ - 10€ <br>
-                Câmara trazeira - 50€ - 100€
+            <p>Na Monkey Business, o cliente poderá encontrar as peças que necessita para a reparação do telemóvel.<br>
+                Obviamente, o preço de cada peça depende do telemóvel que o cliente possui contudo, o price range pouco varia de telemóvel para telemóvel.    
             </p>
+            <ul>
+                <li><b>Bateria: </b>30€ - 50€</li>
+                <li><b>Ecrã: </b>50€ - 100€</li>
+                <li><b>USB-C port: </b>10€ - 20€</li>
+                <li><b>Headphone jack: </b>5€ - 10€</li>
+                <li><b>Câmara traseira: </b>50€ - 100€</li>
+                <li><b>Coluna: </b>20€ - 30€</li>
+                <li><b>Fingerprint scanner: </b>100€ - 150€</li>
+            </ul>
+            <p>É também possível adquirir o serviço de instalação das novas peças, sendo 50€ independentemente do dispositivo.</p>
+            <br>
+            <hr>
         </div>
 
         <div id="produtos" class="w3-justify w3-padding-64">
             <h1><b>Produtos</b></h1>
             <br>
-            <img src="images/monkeycellphone.jpg">
+            <img src="images/monkeycellphone.jpg" style="max-width:100%; height:auto;">
             <br><br>
+            <p>Poderá aqui encontrar os nossos últimos lançamentos de telemóveis.<br>
+                As marcas disponíveis de momento são:
+            </p>
+            <ul>
+                <li>Monkey Phone</li>
+                <li>iMonkey</li>
+                <li>MonkeyMi</li>
+                <li>Monkia</li>
+                <li>Monkeysung</li>
+            </ul>
+            <p>Os preços, como é óbvio, variam consoante a marca que pretende adquirir, sendo o iMonkey e o Monkeysung os nossos telemóveis premium. <br>
+                Já mais económicamente acessíveis, mas com a mesma qualidade, temos os MonkeyMi, os Monkey Phones e ainda o clássico Monkia.</p>
+            <br>
             <h3><b>Monkey Phone</b></h3>
-            <img src="images/10.png">
-            <p>Monkey Phone 2 - 300€</p>
+            <img src="images/10.png" style="max-width:100%; height:auto;">
+            <p>Monkey Phone 2 - 499€</p>
             <br>
             <h3><b>iMonkey</b></h3>
             <br><br>
-            <img src="images/2.png">
+            <img src="images/2.png" style="max-width:100%; height:auto;">
             <br><br>
-            <p>iMonkey 5 - 500€</p>
+            <p>iMonkey 5 - 799€</p>
             <br><br>
             <h3><b>MonkeyMi</b></h3>
             <br><br>
-            <img src="images/11.png">
+            <img src="images/9.png" style="max-width:100%; height:auto;">
             <br>
-            <p>MonkeyMi 10S - 200€</p>
+            <p>MonkeyMi 10S - 399€</p>
             <br>
             <h3><b>Monkia</b></h3>
             <br>
-            <img src="images/6.png">
+            <img src="images/6.png" style="max-width:100%; height:auto;">
             <br><br>
-            <p>Monkia 4 - 400€</p>
+            <p>Monkia 4 - 299€</p>
             <br><br>
             <h3><b>Monkeysung</b></h3>
             <br><br>
-            <img src="images/5.png">
+            <img src="images/5.png" style="max-width:100%; height:auto;">
             <br><br>
-            <p>Monkeysung S20 - 1000€</p>
+            <p>Monkeysung S20 - 899€</p>
+            <hr>
         </div>
 
         <div id="sobrenos" class=" w3-justify w3-padding-64">
             <h1><b>Sobre Nós</b></h1>
             <br>
-            <b>Armando Brandão</b>
-            <br><br>
+            <p>Somos uma equipa de Desenvolvimento Web que se reuniu no âmbito de lutar contra o controlo da Apple sob o mercado de telemóveis.<br>
+                Ambicionamos lutar contra a tendência de criar um mercado de telemóveis com preços exagerados comparando ao verdadeiro valor do produto.<br>
+                Procuramos disponibilizar os melhores serviços para os nossos clientes, dando sempre ouvidos a críticas e sugestões dos mesmos.<br>
+                Estamos em constante evolução e prometemos que o futuro será algo que se deve esperar com grandes expectativas. <br>
+                A nossa equipa é formada por estudantes de Engenharia Informática que estão constantemente a evoluir os seus conhecimentos de Desenvolvimento Web, o que nos proporciona uma versatilidade no que toca ao nosso site. <br>
+                <b>Aqui pode encontrar os integrantes da nossa equipa de desenvolvimento da página:</b>
+            </p>
+            <br>
+            <h3>Armando Brandão</h3>
             <img src="images/wheezer.jpg" style="max-width:100%; height:auto;">
             <br><br>
             <ul>
@@ -140,9 +164,8 @@
                 <li><b>Localidade: </b> Oeiras, Barcarena</li>
                 <li>Estudante de Engenharia Informática, na UAL</li>
             </ul>
-            <br><br>
-            <b>André Santos</b>
-            <br><br>
+            <br>
+            <h3>André Santos</h3>
             <img src="images/batatinha.jpg" style="max-width:100%; height:auto;">
             <br><br>
             <ul>
@@ -151,9 +174,8 @@
                 <li><b>Localidade: </b> Sintra, Cacém</li>
                 <li>Estudante de Engenharia Informática, na UAL</li>
             </ul>
-            <br><br>
-            <b>Diogo Silva</b>
-            <br><br>
+            <br>
+            <h3>Diogo Silva</h3>
             <img src="images/jamal.jpg" style="max-width:100%; height:auto;">
             <br><br>
             <ul>
@@ -162,9 +184,8 @@
                 <li><b>Localidade: </b> Lisboa, Lisboa</li>
                 <li>Estudante de Engenharia Informática, na UAL</li>
             </ul>
-            <br><br>
-            <b>Vasco Bettencourt</b>
-            <br><br>
+            <br>
+            <h3>Vasco Bettencourt</h3>
             <img src="images/vesqui.jpg" style="max-width:100%; height:auto;">
             <br><br>
             <ul>
@@ -173,12 +194,13 @@
                 <li><b>Localidade: </b> Sintra, Massamá</li>
                 <li>Estudante de Engenharia Informática, na UAL</li>
             </ul>
+            <hr>
         </div>
 
         <div id="suporte" class="w3-justify w3-padding-64">
             <h1><b>Suporte</b></h1>
             <br>
-            <p>Entre em contacto conosco em caso de dúvidas. <br>Envie-nos um email ou visite-nos.</p>
+            <p>Entre em contacto conosco em caso de dúvidas ou de problemas relevantes. <br>Envie-nos um email ou visite-nos.</p>
             <br>
             <address>
                 monkeybusiness@autonoma.pt<br>
