--- a/FRONTEND00/www/index.html
+++ b/FRONTEND00/www/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat%22%3E">
+    <link rel="icon" type="image/x-icon" href="images/monkeyicon.png">
     <script src="scripts/script.js"></script>
-    <title>Smartphone Store</title>
+    <title>Monkey Business</title>
 </head>
 <body>
     <nav>
@@ -200,7 +201,11 @@
         <div id="suporte" class="w3-justify w3-padding-64">
             <h1><b>Suporte</b></h1>
             <br>
-            <p>Entre em contacto conosco em caso de dúvidas ou de problemas relevantes. <br>Envie-nos um email ou visite-nos.</p>
+            <p>Entre em contacto conosco em caso de dúvidas ou de problemas relevantes. <br>
+                Envie-nos um email ou visite-nos. <br>
+                Estamos abertos todos os dias, das 9h59 às 19h59. <br>
+                Poderá enviar-nos email até às 23h59. Voltaremos a estar disponíveis a partir das 9h59.
+            </p>
             <br>
             <address>
                 monkeybusiness@autonoma.pt<br>
