--- a/FRONTEND00/www/index.html
+++ b/FRONTEND00/www/index.html
@@ -43,16 +43,18 @@
             <div id="home">
                 <h1><b>Monkey Business</b></h1>
                 <h2>We are way better than Apple</h2>
-                <br>
-                <img src="images/monkey.png" style="max-width:100%; height:auto;">
-                <hr>
+                <img src="images/monkeylogo.png" style="max-width:100%; height:auto;">
+                <hr class="new1">
             </div>
         </header>
 
         <div id="servicos" class="w3-justify w3-padding-64">
-            <h1><b>Serviços</b></h1>
+            <center><h1><b>Serviços</b></h1>
             <br>
-            <img src="images/monkereparing.jpg" style="max-width:100%; height:auto;">
+            <div class="imagebox1">
+            <img src="images/monkeyonthephone.jpg" style="max-width:100%; height:auto;">
+             </div>
+           </center>
             <br><br>
             <p>A nossa empresa disponibiliza vários serviços relativos a telemóveis, tais como:</p>
             <ul>
@@ -115,46 +117,70 @@
             <p>Os preços, como é óbvio, variam consoante a marca que pretende adquirir, sendo o iMonkey e o Monkeysung os nossos telemóveis premium. <br>
                 Já mais económicamente acessíveis, mas com a mesma qualidade, temos os MonkeyMi, os Monkey Phones e ainda o clássico Monkia.</p>
             <br>
-            <h3><b>Monkey Phone</b></h3>
-            <img src="images/10.png" style="max-width:100%; height:auto;">
-            <p>Monkey Phone 2 - 499€</p>
-            <br>
-            <h3><b>iMonkey</b></h3>
-            <br><br>
-            <img src="images/2.png" style="max-width:100%; height:auto;">
-            <br><br>
-            <p>iMonkey 5 - 799€</p>
-            <br><br>
-            <h3><b>MonkeyMi</b></h3>
-            <br><br>
-            <img src="images/9.png" style="max-width:100%; height:auto;">
-            <br>
-            <p>MonkeyMi 10S - 399€</p>
-            <br>
-            <h3><b>Monkia</b></h3>
-            <br>
-            <img src="images/6.png" style="max-width:100%; height:auto;">
-            <br><br>
-            <p>Monkia 4 - 299€</p>
-            <br><br>
-            <h3><b>Monkeysung</b></h3>
-            <br><br>
-            <img src="images/5.png" style="max-width:100%; height:auto;">
-            <br><br>
-            <p>Monkeysung S20 - 899€</p>
-            <hr>
+            <div class="row">
+                <div class="columnleft imagebox2">
+                    <h3><b>Monkey Phone</b></h3>
+                    <img src="images/10.png" style="max-width:100%; height:auto;">
+                    <p>Monkey Phone - 499€</p>
+                </div>
+                <br>
+                <div class="columnright imagebox2">
+                    <h3><b>iMonkey</b></h3>
+                    <br><br>
+                    <img src="images/2.png" style="max-width:100%; height:auto;">
+                    <br><br>
+                    <p>iMonkey - 799€</p>
+                </div>
+                <br><br><br><br><br><br><br><br><br><br><br><br>
+                
+            <div class="row">
+                <div class="columnleft imagebox2">    
+                    <h3><b>MonkeyMi</b></h3>
+                    <br><br>
+                    <img src="images/9.png" style="max-width:100%; height:auto;">
+                    <br>
+                    <p>MonkeyMi 10S - 399€</p>
+                </div>
+                <br>
+                <div class="columnright imagebox2">
+                    <br><br>
+                    <h3><b>Monkeysung</b></h3>
+                    <br><br>
+                    <img src="images/5.png" style="max-width:100%; height:auto;">
+                     <br><br>
+                     <p>Monkeysung S20 - 899€</p>
+                </div>
+            </div>
         </div>
 
         <div id="sobrenos" class=" w3-justify w3-padding-64">
             <h1><b>Sobre Nós</b></h1>
-            <br>
-            <p>Somos uma equipa de Desenvolvimento Web que se reuniu no âmbito de lutar contra o controlo da Apple sob o mercado de telemóveis.<br>
+            
+            <p><br>Somos uma equipa de Desenvolvimento Web que se reuniu no âmbito de lutar contra o controlo da Apple sob o mercado de telemóveis.<br>
                 Ambicionamos lutar contra a tendência de criar um mercado de telemóveis com preços exagerados comparando ao verdadeiro valor do produto.<br>
                 Procuramos disponibilizar os melhores serviços para os nossos clientes, dando sempre ouvidos a críticas e sugestões dos mesmos.<br>
                 Estamos em constante evolução e prometemos que o futuro será algo que se deve esperar com grandes expectativas. <br>
                 A nossa equipa é formada por estudantes de Engenharia Informática que estão constantemente a evoluir os seus conhecimentos de Desenvolvimento Web, o que nos proporciona uma versatilidade no que toca ao nosso site. <br>
-                <b>Aqui pode encontrar os integrantes da nossa equipa de desenvolvimento da página:</b>
+                <br><b>Aqui pode encontrar os integrantes da nossa equipa de desenvolvimento da página:</b>
+                <br><br>
             </p>
+            <hr class="new2">
+            <div class="row">
+                <div class="column">
+                  <img src="images/batatinha.jpg" alt="andre" style="width:100%", height="156px">
+                </div>
+                <div class="column">
+                  <img src="images/wheezer.jpg" alt="Armando" style="width:100%">
+                </div>   
+                <div class="column">
+                  <img src="images/jamal.jpg" alt="silva" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/vesqui.jpg" alt="vesqui" style="width:100%", height="156px">
+                  </div>
+            </div>
+            <hr class="new2">
+            <!--
             <br>
             <h3>Armando Brandão</h3>
             <img src="images/wheezer.jpg" style="max-width:100%; height:auto;">
@@ -196,11 +222,11 @@
                 <li>Estudante de Engenharia Informática, na UAL</li>
             </ul>
             <hr>
+        -->
         </div>
 
         <div id="suporte" class="w3-justify w3-padding-64">
             <h1><b>Suporte</b></h1>
-            <br>
             <p>Entre em contacto conosco em caso de dúvidas ou de problemas relevantes. <br>
                 Envie-nos um email ou visite-nos. <br>
                 Estamos abertos todos os dias, das 9h59 às 19h59. <br>
@@ -215,12 +241,12 @@
             </address>
             <hr>  
         </div>
-
+    <!--
         <footer>
             <div class="footer">
                 <p>Social media</p>
             </div>
-        </footer>
+        </footer> -->
     </div>
 </body>
 </html>
