--- a/FRONTEND00/www/index.html
+++ b/FRONTEND00/www/index.html
@@ -14,11 +14,14 @@
 <body>
     <nav>
         <div class="topnav">
+            
             <a href="#home">Home</a>
             <a href="#servicos">Serviços</a>
             <a href="#produtos">Produtos</a>
             <a href="#sobrenos">Sobre Nós</a>
             <a href="#suporte">Suporte</a>
+            <a></a>
+            <img src="images/banana-pixel-art-png.png" alt="banana" width="50px" height="50px">
         </div>
     </nav>
     <div class="content" style="text-align:center; padding: 300px;">
@@ -42,7 +45,7 @@
         <header>
             <div id="home">
                 <h1><b>Monkey Business</b></h1>
-                <h2>We are way better than Apple</h2>
+                <br>
                 <img src="images/monkeylogo.png" style="max-width:100%; height:auto;">
                 <hr class="new1">
             </div>
@@ -101,7 +104,8 @@
 
         <div id="produtos" class="w3-justify w3-padding-64">
             <h1><b>Produtos</b></h1>
-            <br>
+            <br><br>
+            <!--<br>
             <img src="images/monkeycellphone.jpg" style="max-width:100%; height:auto;">
             <br><br>
             <p>Poderá aqui encontrar os nossos últimos lançamentos de telemóveis.<br>
@@ -116,18 +120,24 @@
             </ul>
             <p>Os preços, como é óbvio, variam consoante a marca que pretende adquirir, sendo o iMonkey e o Monkeysung os nossos telemóveis premium. <br>
                 Já mais económicamente acessíveis, mas com a mesma qualidade, temos os MonkeyMi, os Monkey Phones e ainda o clássico Monkia.</p>
-            <br>
+            <br>-->
             <div class="row">
                 <div class="columnleft imagebox2">
                     <h3><b>Monkey Phone</b></h3>
+                    <br><br>
+                    <div class="zoom">
                     <img src="images/10.png" style="max-width:100%; height:auto;">
+                    <br><br>
+                    </div>
                     <p>Monkey Phone - 499€</p>
                 </div>
                 <br>
                 <div class="columnright imagebox2">
                     <h3><b>iMonkey</b></h3>
                     <br><br>
+                    <div class="zoom">
                     <img src="images/2.png" style="max-width:100%; height:auto;">
+                    </div>
                     <br><br>
                     <p>iMonkey - 799€</p>
                 </div>
@@ -137,18 +147,21 @@
                 <div class="columnleft imagebox2">    
                     <h3><b>MonkeyMi</b></h3>
                     <br><br>
+                    <div class="zoom">
                     <img src="images/9.png" style="max-width:100%; height:auto;">
-                    <br>
+                    </div>
+                    <br><br>
                     <p>MonkeyMi 10S - 399€</p>
                 </div>
                 <br>
                 <div class="columnright imagebox2">
-                    <br><br>
                     <h3><b>Monkeysung</b></h3>
                     <br><br>
+                    <div class="zoom">
                     <img src="images/5.png" style="max-width:100%; height:auto;">
-                     <br><br>
-                     <p>Monkeysung S20 - 899€</p>
+                    </div>
+                    <br><br>
+                    <p>Monkeysung S20 - 899€</p>
                 </div>
             </div>
         </div>
