--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -14,13 +14,11 @@
 <body>
     <nav>
         <div class="topnav">
-            
             <a href="#home">Home</a>
             <a href="#servicos">Serviços</a>
             <a href="#produtos">Produtos</a>
             <a href="#sobrenos">Sobre Nós</a>
             <a href="#suporte">Suporte</a>
-            
             <img src="images/banana-pixel-art-png.png" alt="banana" width="50px" height="50px">
         </div>
     </nav>
@@ -121,6 +119,14 @@
         <center>
             <h1><b>Produtos</b></h1>
         </center>
+            <br>
+
+            <div class="prodbar">
+                <button id="procurar" onclick="procurar()">Procurar</button>
+                <button id="inserir">Inserir</button>
+                <button id="eliminar" onclick="eliminar()">Eliminar</button>
+            </div>
+
             <br><br>
             <!--<br>
             <img src="images/monkeycellphone.jpg" style="max-width:100%; height:auto;">
@@ -138,6 +144,7 @@
             <p>Os preços, como é óbvio, variam consoante a marca que pretende adquirir, sendo o iMonkey e o Monkeysung os nossos telemóveis premium. <br>
                 Já mais económicamente acessíveis, mas com a mesma qualidade, temos os MonkeyMi, os Monkey Phones e ainda o clássico Monkia.</p>
             <br>-->
+
             <div class="row">
                 <div class="columnleft imagebox2">
                     <h3><b>Monkey Phone</b></h3>
