--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -40,14 +40,16 @@
         </div>
 
         <header>
-            <div id="home">
+            <div id="home" class="w3-justify w3-padding-64">
+                <center>
                 <h1><b>Monkey Business</b></h1>
                 <br>
                 <img src="images/monkeylogo.png" width="200px" height:auto;>
-                <br><br><br><br>
-                <br><br><br><br><br><br><br><br><br><br><br><br>  
+                </center>
+                <br><br><br><br><br><br><br><br><br><br>
             </div>
         </header>
+
         <div id="servicos" class="w3-justify w3-padding-64">
             <hr class="new1">
             <center><h1><b>Serviços</b></h1>
@@ -74,22 +76,22 @@
             </center>
             <br>
             <div class="row">
-            <div class="columnleft">
-                <img src="images/bananaphonegif2.gif" alt="bananaphone" height="350px">
+                <div class="columnleft">
+                    <img src="images/bananaphonegif2.gif" alt="bananaphone" height="350px">
                 </div>
                 <div class="columnright imagebox2">
-                <h4><b>Reparação e Formatação</b></h4>
-                <p>Os preços de reparações variam consoante o telemóvel em questão, devido às diferentes peças e à acessibilidade ao interior do telemóvel.<br>
-                    Também se tem em conta a complexidade da estrutura do telemóvel que deseja reparar.
-                </p>
-                <ul>
-                    <li><b>Monkey Phone</b> - 75€ - 125€</li>
-                    <li><b>iMonkey</b> - 100€ - 200€</li>
-                    <li><b>MonkeyMi</b> - 50€ - 100€</li>
-                    <li><b>Monkia</b> - 50€ - 100€</li>
-                    <li><b>Monkeysung</b> - 100€ - 200€</li>
-                </ul>
-                <br>
+                    <h4><b>Reparação e Formatação</b></h4>
+                    <p>Os preços de reparações variam consoante o telemóvel em questão, devido às diferentes peças e à acessibilidade ao interior do telemóvel.<br>
+                        Também se tem em conta a complexidade da estrutura do telemóvel que deseja reparar.
+                    </p>
+                    <ul>
+                        <li><b>Monkey Phone</b> - 75€ - 125€</li>
+                        <li><b>iMonkey</b> - 100€ - 200€</li>
+                        <li><b>MonkeyMi</b> - 50€ - 100€</li>
+                        <li><b>Monkia</b> - 50€ - 100€</li>
+                        <li><b>Monkeysung</b> - 100€ - 200€</li>
+                    </ul>
+                    <br>
                 </div>
             </div>
             <br><br>
@@ -150,37 +152,38 @@
                     <h3><b>Monkey Phone</b></h3>
                     <br><br>
                     <div class="zoom">
-                    <img src="images/10.png" style="max-width:100%; height:auto;">
-                    <br><br>
+                        <img src="images/10.png" style="max-width:100%; height:auto;">
                     </div>
+                    <br><br>
                     <p>Monkey Phone - 499€</p>
                 </div>
-                <br>
+               
                 <div class="columnright imagebox2">
                     <h3><b>iMonkey</b></h3>
                     <br><br>
                     <div class="zoom">
-                    <img src="images/2.png" style="max-width:100%; height:auto;">
+                        <img src="images/2.png" style="max-width:100%; height:auto;">
                     </div>
                     <br><br>
                     <p>iMonkey - 799€</p>
                 </div>
+            </div>
             <div class="row">
                 <div class="columnleft imagebox2">    
                     <h3><b>MonkeyMi</b></h3>
                     <br><br>
                     <div class="zoom">
-                    <img src="images/9.png" style="max-width:100%; height:auto;">
+                        <img src="images/9.png" style="max-width:100%; height:auto;">
                     </div>
                     <br><br>
-                    #f08b8beyMi 10S - 399€</p>
+                    <p>MonkeyMi 10S - 399€</p>
                 </div>
-                <br>
+                
                 <div class="columnright imagebox2">
                     <h3><b>Monkeysung</b></h3>
                     <br><br>
                     <div class="zoom">
-                    <img src="images/5.png" style="max-width:100%; height:auto;">
+                        <img src="images/5.png" style="max-width:100%; height:auto;">
                     </div>
                     <br><br>
                     <p>Monkeysung S20 - 899€</p>
