Fixing minor problems

--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -20,12 +20,14 @@
             <a href="#sobrenos">Sobre Nós</a>
             <a href="#suporte">Suporte</a>
             <img src="images/banana-pixel-art-png.png" alt="banana" width="50px" height="50px">
-            <button class="open-button" onclick="login()">Login</button>
+            <button class="login" onclick="login()">Login</button>
+            <button class="register" onclick="registar()">Registar</button>
         </div>
     </nav>
     <div class="content" style="text-align:center; padding: 300px;">
+        <!--
         <div class="form-popup" id="myForm">
-            <!--<form action="/action_page.php" class="form-container">
+                <form action="/action_page.php" class="form-container">
                 <h1>Login</h1>
 
                 <label for="email"><b>Email</b></label>
@@ -37,9 +39,9 @@
                 <button type="submit" class="btn">Login</button>
                 <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
             </form>
-            -->
+            
         </div>
-
+        -->
         <header>
             <div id="home" class="w3-justify w3-padding-64">
                 <center>
@@ -124,7 +126,7 @@
         </center>
             <br>
 
-            <div class="prodbar" id="main">
+            <div class="prodbar">
                 <button id="procurar" onclick="procurar()">Procurar</button>
                 <button id="inserir">Inserir</button>
                 <button id="eliminar" onclick="eliminar()">Eliminar</button>
