Login and Register fixed, Logout implemented

--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -20,8 +20,9 @@
             <a href="#sobrenos">Sobre Nós</a>
             <a href="#suporte">Suporte</a>
             <img src="images/banana-pixel-art-png.png" alt="banana" width="50px" height="50px">
-            <button class="login" onclick="login()">Login</button>
-            <button class="register" onclick="registar()">Registar</button>
+            <button id="login" class="login" onclick="login()">Login</button>
+            <button id="registar" class="registar" onclick="registar()">Registar</button>
+            <button id="logout" class="logout" onclick="logout()">Logout</button>
         </div>
     </nav>
     <div class="content" style="text-align:center; padding: 300px;">
