--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -122,7 +122,7 @@
                 <br>
                 <br>
                 <br>
-            <div id="produtos" class="w3-justify w3-padding-64">
+            <div id="produtos" class="w3-padding-64">
                 <hr class="new1">
                 <center>
                     <h1><b>Produtos</b></h1>
@@ -153,7 +153,7 @@
                     Já mais económicamente acessíveis, mas com a mesma qualidade, temos os MonkeyMi, os Monkey Phones e ainda o clássico Monkia.</p>
                 <br>-->
 
-                <div class="row">
+                <div id="prodList" class="row">
                     <div class="columnleft imagebox2">
                         <h3><b>Monkey Phone</b></h3>
                         <br><br>
@@ -164,7 +164,7 @@
                         <p>Monkey Phone - 499€</p>
                     </div>
                 
-                    <div class="columnright imagebox2">
+                    <div class="columnleft imagebox2">
                         <h3><b>iMonkey</b></h3>
                         <br><br>
                         <div class="zoom">
@@ -173,9 +173,7 @@
                         <br><br>
                         <p>iMonkey - 799€</p>
                     </div>
-                </div>
 
-                <div class="row">
                     <div class="columnleft imagebox2">    
                         <h3><b>MonkeyMi</b></h3>
                         <br><br>
@@ -186,7 +184,7 @@
                         <p>MonkeyMi 10S - 399€</p>
                     </div>
                     
-                    <div class="columnright imagebox2">
+                    <div class="columnleft imagebox2">
                         <h3><b>Monkeysung</b></h3>
                         <br><br>
                         <div class="zoom">
