--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -81,9 +81,7 @@
                 </center>
                 <br>
                 <div class="row">
-                    <div class="columnleft">
-                        <img src="images/bananaphonegif2.gif" alt="bananaphone" height="350px">
-                    </div>
+                    <img src="images/bananaphonegif2.gif" alt="bananaphone" height="350px">
                     <div class="columnright imagebox2">
                         <h4><b>Reparação e Formatação</b></h4>
                         <p>Os preços de reparações variam consoante o telemóvel em questão, devido às diferentes peças e à acessibilidade ao interior do telemóvel.<br>
@@ -153,7 +151,7 @@
                     Já mais económicamente acessíveis, mas com a mesma qualidade, temos os MonkeyMi, os Monkey Phones e ainda o clássico Monkia.</p>
                 <br>-->
 
-                <div id="prodList" class="row">
+                <div id="prodclass="row">
                     <div class="columnleft imagebox2">
                         <h3><b>Monkey Phone</b></h3>
                         <br><br>
